# vision-of-nightreign

./: .gitignore  CMakeLists.txt  README.md  VisionOfNightreign.ini
.github/workflows/: build.yml
scripts/: build_release.bat
src/: dllmain.cpp  game_handler.cpp  game_handler.h  memory.cpp  memory.h  overlay.cpp  overlay.h  ui_renderer.cpp  ui_renderer.h
src/structs/: chr_ins.h  chr_module_bag.h  chr_resist_module.h  chr_stat_module.h  chr_super_armor_module.h  world_chr_man_imp.h
